--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -11,6 +11,11 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-00-02
+2013-04-29 Andy Salnikov
+- add stop=none option
+- document options in doxygen comments
+
 Tag: V00-00-01
 2013-04-23 Andy Salnikov
 - first implementation, mostly working, not very well tested
