--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -11,6 +11,10 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-00-03
+2013-09-17 Andy Salnikov
+- documentation generation changed in SConsTools, updating SConscript
+
 Tag: V00-00-02
 2013-04-29 Andy Salnikov
 - add stop=none option
