Change default run number for shmem input to large number so most recent calib constants are used

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -11,6 +11,11 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-00-04
+2014-02-14 Christopher O'Grady
+- Changed default run number for Shmem input to a large number
+  (was zero) so that software can fetch most-recent calib constants.
+	
 Tag: V00-00-03
 2013-09-17 Andy Salnikov
 - documentation generation changed in SConsTools, updating SConscript
