--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -11,6 +11,10 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-01-02
+2015-03-03 David Schneider
+- small data JIRA issue PSAS-85 - adapt to new XtcFileName interface
+
 Tag: V00-01-01
 2014-10-27 Christopher O'Grady
 - Reduce queue depth in DgramSourceShmem from 32 to 3.
